aiscm (0.7.1-1) UNRELEASED; urgency=low

  * doc/installation.md: updated installation documentation
  * aiscm/aiscm.xpm: added installation documentation
  - FFmpeg network stream example
  - better test video
  - use re-export statements to make modules more independent
  - use read-image, read-audio, write-image, and write-audio throughout

 -- Jan Wedekind <jan@wedesoft.de>  Fri, 16 Sep 2016 17:43:00 +0100

aiscm (0.6.2-2) UNRELEASED; urgency=low

  - Make releases for different distros

 -- Jan Wedekind <jan@wedesoft.de>  Wed, 7 Sep 2016 20:10:18 +0100

aiscm (0.6.2-1) UNRELEASED; urgency=low

  - fix package dependencies (do not use aliases)

 -- Jan Wedekind <jan@wedesoft.de>  Thu, 1 Sep 2016 12:45:08 +0100

aiscm (0.6.1-1) UNRELEASED; urgency=low

  - Pulse audio input and output using asynchronous API
  - ring buffer for first-in first-out (FIFO) buffering of data
  - improved documentation

 -- Jan Wedekind <jan@wedesoft.de>  Fri, 19 Jul 2016 21:49:25 +0100

aiscm (0.5.1-1) UNRELEASED; urgency=low

  * aiscm/ffmpeg.scm: reading video/audio files using FFmpeg
  * aiscm/pulse.c: initialise "error" integer to PA_OK
  * aiscm/util.scm: synchronisation method for audio-video-synchronisation
  * aiscm/v4l2.c: refactor video capture code a bit
  * Dockerfile: Docker build for Debian Jessie/Sid, Ubuntu Trusty/Xenial
  * aiscm/xorg.scm: use XVideo as default for single-window videos
  - updated documentation

 -- Jan Wedekind <jan@wedesoft.de>  Fri, 22 Jul 2016 21:18:11 +0000

aiscm (0.4.2-1) UNRELEASED; urgency=low

  - compose RGB and complex values from arrays
  - added some documentation
  * aiscm/jit.scm: refactored dispatching code

 -- Jan Wedekind <jan@wedesoft.de>  Fri, 17 Jun 2016 21:41:40 +0000

aiscm (0.4.1-1) UNRELEASED; urgency=low

  - refactored jit compiler
  * aiscm/jit.scm: tensor implementation (WIP)

 -- Jan Wedekind <jan@wedesoft.de>  Wed, 8 Jun 2016 07:45:00 +0000

aiscm (0.3.1-1) UNRELEASED; urgency=low
