@@ -50,8 +50,8 @@
 (define-method (coerce (a <meta<element>>) (b <meta<complex<>>>)) (complex (coerce a (base b))))
 (define-method (coerce (a <meta<complex<>>>) (b <meta<complex<>>>)) (complex (coerce (base a) (base b))))
 (define-method (coerce (a <meta<complex<>>>) (b <meta<sequence<>>>)) (multiarray (coerce a (typecode b)) (dimensions b)))
-(define-method (match (c <complex>) . args)
-  (complex (apply match (concatenate (map-if (cut is-a? <> <complex>) content list (cons c args))))))
+(define-method (native-type (c <complex>) . args)
+  (complex (apply native-type (concatenate (map-if (cut is-a? <> <complex>) content list (cons c args))))))
 (define-method (build (self <meta<complex<>>>) value) (fetch value))
 (define-method (base (self <meta<sequence<>>>)) (multiarray (base (typecode self)) (dimensions self)))
 (define-syntax-rule (unary-complex-op op)
