@@ -40,13 +40,13 @@
 (ok (equal? "#<<bool> #f>"
             (call-with-output-string (lambda (port) (write bool-false port))))
     "write boolean object")
-(ok (equal? <bool> (match #f))
+(ok (equal? <bool> (native-type #f))
     "type matching for #f")
-(ok (equal? <bool> (match #t))
+(ok (equal? <bool> (native-type #t))
     "type matching for #t")
-(ok (equal? <bool> (match #f #t))
+(ok (equal? <bool> (native-type #f #t))
     "type matching for multiple booleans")
-(ok (throws? (match #f 1))
+(ok (throws? (native-type #f 1))
     "boolean does not match with anything else at the moment")
 (ok (get bool-true)
     "get value of true")
