@@ -46,11 +46,11 @@
     "coerce complex type and 2D array")
 (ok (equal? (list 2 3) (content 2+3i))
     "'content' extracts the components of a complex value")
-(ok (eq? (complex <ubyte>) (match 2+3i))
+(ok (eq? (complex <ubyte>) (native-type 2+3i))
     "type matching for 2+3i")
-(ok (eq? (complex <double>) (match 2+3i 1.2))
+(ok (eq? (complex <double>) (native-type 2+3i 1.2))
     "type matching for complex value and scalar")
-(ok (eq? (complex <double>) (match 1.2 2+3i))
+(ok (eq? (complex <double>) (native-type 1.2 2+3i))
     "type matching for scalar and complex value")
 (ok (eq? (sequence <int>) (base (sequence (complex <int>))))
     "base type of sequence applies to element type")
