@@ -110,39 +110,39 @@
     "foreign type of byte")
 (ok (equal? uint16 (foreign-type (integer 16 unsigned)))
     "foreign type of unsigned short int")
-(ok (equal? <ubyte> (match 255))
+(ok (equal? <ubyte> (native-type 255))
     "type matching for 255")
-(ok (equal? <usint> (match 256))
+(ok (equal? <usint> (native-type 256))
     "type matching for 256")
-(ok (equal? <usint> (match 65535))
+(ok (equal? <usint> (native-type 65535))
     "type matching for 65535")
-(ok (equal? <uint> (match 65536))
+(ok (equal? <uint> (native-type 65536))
     "type matching for 65536")
-(ok (equal? <uint> (match 4294967295))
+(ok (equal? <uint> (native-type 4294967295))
     "type matching for 4294967295")
-(ok (equal? <ulong> (match 4294967296))
+(ok (equal? <ulong> (native-type 4294967296))
     "type matching for 4294967296")
-(ok (equal? <ulong> (match 18446744073709551615))
+(ok (equal? <ulong> (native-type 18446744073709551615))
     "type matching for 18446744073709551615")
-(ok (equal? <double> (match 18446744073709551616))
+(ok (equal? <double> (native-type 18446744073709551616))
     "type matching for 18446744073709551616")
-(ok (equal? <byte> (match -128))
+(ok (equal? <byte> (native-type -128))
     "type matching for -128")
-(ok (equal? <sint> (match -129))
+(ok (equal? <sint> (native-type -129))
     "type matching for -129")
-(ok (equal? <sint> (match -32768))
+(ok (equal? <sint> (native-type -32768))
     "type matching for -32768")
-(ok (equal? <int> (match -32769))
+(ok (equal? <int> (native-type -32769))
     "type matching for -32769")
-(ok (equal? <int> (match -2147483648))
+(ok (equal? <int> (native-type -2147483648))
     "type matching for -2147483648")
-(ok (equal? <long> (match -2147483649))
+(ok (equal? <long> (native-type -2147483649))
     "type matching for -2147483649")
-(ok (equal? <long> (match -9223372036854775808))
+(ok (equal? <long> (native-type -9223372036854775808))
     "type matching for -9223372036854775808")
-(ok (equal? <double> (match -9223372036854775809))
+(ok (equal? <double> (native-type -9223372036854775809))
     "type matching for -9223372036854775809")
-(ok (equal? <byte> (match 1 -1))
+(ok (equal? <byte> (native-type 1 -1))
     "match two integers")
 (ok (is-a? (wrap 125) <ubyte>)
     "wrapping 125 creates a byte container")
@@ -150,7 +150,7 @@
     "wrapping 125 maintains value")
 (ok (eqv? 125 (get (wrap (wrap 125))))
     "don't wrap twice")
-(ok (equal? <double> (match 1 1.5))
+(ok (equal? <double> (native-type 1 1.5))
     "type matching for 1 and 1.5")
 (ok (eqv? 123 (get (make <int> #:value 123)))
     "get value of integer")
