@@ -79,13 +79,13 @@
     "'content' extracts the channels of an RGB value")
 (ok (equal? (list 2 3 5) (map get (content (make <intrgb> #:value (rgb 2 3 5)))))
     "'content' extracts values of typed RGB value")
-(ok (eq? <ubytergb> (match (rgb 2 3 5)))
+(ok (eq? <ubytergb> (native-type (rgb 2 3 5)))
     "type matching for (rgb 2 3 5)")
-(ok (eq? (rgb <double>) (match (rgb 2 3.5 5)))
+(ok (eq? (rgb <double>) (native-type (rgb 2 3.5 5)))
     "type matching for (rgb 2 3.5 5)")
-(ok (eq? (rgb <double>) (match (rgb 2 3 5) 1.2))
+(ok (eq? (rgb <double>) (native-type (rgb 2 3 5) 1.2))
     "type matching for RGB value and scalar")
-(ok (eq? (rgb <double>) (match 1.2 (rgb 2 3 5)))
+(ok (eq? (rgb <double>) (native-type 1.2 (rgb 2 3 5)))
     "type matching for scalar and RGB value")
 (ok (eq? (sequence <int>) (base (sequence <intrgb>)))
     "base type of sequence applies to element type")
