@@ -6,6 +6,7 @@ aiscm (0.7.1-1) UNRELEASED; urgency=low
   - better test video
   - use re-export statements to make modules more independent
   - use read-image, read-audio, write-image, and write-audio throughout
+  - renamed "match" to "native-type"
 
  -- Jan Wedekind <jan@wedesoft.de>  Fri, 16 Sep 2016 17:43:00 +0100
 
